# minimal-pandas-api-for-polars

./: .gitignore  README.md  pyproject.toml
minimal_pandas_api_for_polars/lib/: polars_utils.py
minimal_pandas_api_for_polars/lib/helpers/: convert_builtin_python_class_to_polars_dtype.py  finalize_select_exprs.py  fqn.py  get_restcols_select_expr.py  is_convertible_builtin_python_class.py  is_polars_dtype_directive.py  pandas_dtype_directive_to_polars_dtype.py  polars_dtype_to_pandas_dtype_name.py  polars_dtype_to_python_primitive_type.py  testing_utils.py  to_polars_dtype_directive.py  types.py
minimal_pandas_api_for_polars/lib/interop/: pd_to_pl.py  pl_to_pandas.py
minimal_pandas_api_for_polars/lib/pandas_api/: pl_assert_frame_equal.py  pl_assert_series_equal.py  pl_assign.py  pl_astype.py  pl_drop.py  pl_drop_duplicates.py  pl_dropna.py  pl_dtypes.py  pl_info.py  pl_rename.py  pl_select_dtypes.py  pl_sort_values.py  pl_testing.py  pl_todict.py
minimal_pandas_api_for_polars/lib/wrappers/: chainable.py  constants.py  mpp_frame.py  mpp_series.py  mpp_strns.py  mpp_wrap.py
tests/: test_minimal_pandas_api_for_polars.py
