[tool.poetry]
name = "minimal-pandas-api-for-polars"
version = "0.1.0"
description = ""
authors = ["Austin Ray <austin@hemmeter.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
polars = "0.11.0"
pandas = "1.3.5"
Bottleneck = "1.3.2"
numexpr = "2.8.1"
pyarrow = "6.0.1"

[tool.poetry.dev-dependencies]
pytest = "5.2"
seaborn = "0.11.2"
black = "21.12b0"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
